# sverdrup

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  CLAUDE.md  PROGRESS.md  README.md  phase3_scope_spec.md  phase4_scope_spec.md  phase5_scope_spec.md  pixi.toml  pyproject.toml
.claude/: CLAUDE_SETTINGS_summarize_and_exit.json
.claude/hooks/: summarize-and-exit.sh
.github/workflows/: release.yml
conda-recipe/: README.md
docs/: oracle-runbook.md  phase1_claude_code_prompt.md  phase1_scope_spec.md  phase2_claude_code_prompt.md  phase2_scope_spec.md  phase3_claude_code_prompt.md  phase3_scope_spec.md  phase4_claude_code_prompt.md  validation_claude_code_prompt.md  validation_scope_spec.md
docs/superpowers/ci/: release.yml
docs/superpowers/plans/: 2026-06-21-regatta-phase1.md  2026-06-21-regatta-phase1.md.tasks.json  2026-06-21-sverdrup-pypi-release.md  2026-06-21-sverdrup-pypi-release.md.tasks.json  2026-06-22-requests-tenacity-tqdm-migration-plan.md  2026-06-22-requests-tenacity-tqdm-migration-plan.md.tasks.json  2026-06-23-phase2-tiling-blend.md  2026-06-23-phase2-tiling-blend.md.tasks.json  2026-06-25-phase3-gmrf-representation-generalization.md  2026-06-25-phase3-gmrf-representation-generalization.md.tasks.json  2026-06-25-phase3-task9-gmrf-kriging-sampler.md  2026-06-26-phase4-fem-and-nonchain-sampler.md  2026-06-26-phase4-fem-and-nonchain-sampler.md.tasks.json  2026-06-27-oi-validation-2021a-ose.md  2026-06-27-oi-validation-2021a-ose.md.tasks.json  2026-06-27-stageb-core-authoritative-sampler.md  2026-06-27-stageb-core-authoritative-sampler.md.tasks.json  2026-06-28-phase5-autotune-loop.md  2026-06-28-phase5-autotune-loop.md.tasks.json  2026-07-01-phase6-fem-discretization.md  2026-07-01-phase6-fem-discretization.md.tasks.json  2026-07-01-stagec-redesign.md  2026-07-01-stagec-redesign.md.tasks.json  2026-07-01-tuner-debt-cleanup.md  2026-07-01-tuner-debt-cleanup.md.tasks.json
docs/superpowers/specs/: 2026-06-21-halosphere-pypi-release-design.md  2026-06-21-regatta-phase1-architecture-design.md  2026-06-21-sverdrup-pypi-release-design.md  2026-06-22-requests-tenacity-tqdm-migration-design.md  2026-06-23-phase2-tiling-blend-architecture-design.md  2026-06-26-phase4-fem-and-nonchain-sampler-design.md  2026-06-27-oi-validation-2021a-ose-design.md  2026-06-27-stageb-seam-overpinning-fix-design.md  2026-06-28-dc2021a-download-reproducer-design.md  2026-06-28-dc2023-downloads-design.md  2026-06-28-phase5-autotune-loop-design.md  2026-07-01-phase6-fem-discretization-design.md  2026-07-01-stagec-redesign-design.md  2026-07-01-tuner-debt-cleanup-design.md
docs/validation/: RESULT.md  methods_and_data_inventory.md  parameter_audit_trail.md  phase5_feasibility_resolution_frontier.md
scripts/: diag_crossseam.py  probe_fem_reduction_exactness.py  stage_b_gate_run.py
src/regatta/: __main__.py
src/regatta/adapters/: executor_dask.py  storage_fsspec.py
src/regatta/application/: config.py  pipeline.py  solve.py  splits.py  uow.py
src/regatta/core/: derived.py  distribution.py  grid.py  method.py  observations.py  parameters.py  ports.py  provenance.py  seeding.py  types.py
src/regatta/derived/: area_average.py  eke.py  firstdifference.py  transport.py  velocity.py
src/regatta/distributions/: adapters.py  ensemble.py  gaussian.py  persisted.py
src/regatta/eval/: accuracy.py  calibration.py  groundtrack.py
src/regatta/methods/: kernel.py  oi.py  registry.py  trivial.py
src/sverdrup/: __main__.py
src/sverdrup/adapters/: executor_dask.py  (+1 more)
tests/: test_aggregate.py  test_blend_cheap_path.py  test_blend_cheap_vs_sample.py  test_blend_derived_composition.py  test_blend_general_path.py  test_blend_provenance.py  test_blend_weights.py  test_coherent_driver_seam.py  test_coherent_sampler.py  test_core_authoritative_gate.py  test_cross_seam_derivative_gate.py  test_degradation_path.py  test_eval_point_blend.py  test_eval_resolution.py  test_eval_skill.py  test_eval_spectral.py  test_fem_agnosticism_path.py  test_fem_boundary_payoff.py  test_fem_mesh.py  test_fem_multitile.py  test_fem_precision.py  test_fem_projection.py  test_geometry.py  test_gmrf_blend.py  test_gmrf_prior_variance_normalization.py  test_kernel_gaussian_degrees.py  test_latitude_varying_provider.py  test_metric_scope.py  test_nonstationary_kappa.py  test_phase2_stage_a.py  test_phase2_stage_b.py  test_stage_a_end_to_end.py  test_stage_b_gate.py  test_stage_b_method_agnostic.py  test_stage_c_dod.py  test_stage_c_hard_barrier.py  test_stage_c_tradeoff.py  test_stage_c_worst_case_localized.py  test_tiling_coordinator.py  test_tiling_partition.py  (+10 more)
tests/fixtures/: make_fixtures.py  natl60_ref_tiny.nc  natl60_tiny.nc  ose_tiny.nc
tests/integration/: config_osse.json  test_cancellation.py  test_executor.py  test_solve_unit.py  test_storage.py  test_vertical_slice.py
tests/oracle/: conftest.py  test_oi_oracle.py
tests/unit/: _doubles.py  _strip_fixtures.py  _tree_gate.py  test_accuracy.py  test_adapters.py  test_calibration.py  test_datasource.py  test_derived_route.py  test_distributions.py  test_download.py  test_draw_joint.py  test_evaluation.py  test_firstdifference.py  test_gmrf_grid.py  test_gmrf_kriging_driver.py  test_gmrf_kriging_oracle.py  test_gmrf_linalg.py  test_gmrf_method.py  test_grid.py  test_groundtrack.py  test_kernel.py  test_observations.py  test_oi.py  test_parameters.py  test_persisted.py  test_precision_distribution.py  test_product.py  test_projection.py  test_provenance.py  test_reduction.py  test_seeding.py  test_solver.py  test_spanning_tree.py  test_splits.py  test_strip_network.py  test_tree_kriging_driver.py  test_tree_kriging_oracle.py  test_trivial.py  test_types.py
tests/validation/: _net.py  conftest.py  test_access.py  test_config.py  test_download_dc2021a.py  test_download_dc2023.py  test_input_adapter.py  test_output_adapter.py  test_params.py  test_report.py  test_run.py  test_run_challenge_map.py  test_their_eval_lambda_x_regression.py  test_their_eval_spike.py
(+87 files in other folders)
